# focus-zones-native

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  repomix-focus-zones-instructions.md  repomix-focus-zones.json
.agents/workflows/: build.md  test.md
src/: config.c  config.h  hotkey.c  hotkey.h  layout.c  layout.h  main.c  overlay.c  overlay.h  resize.c  resize.h  swap.c  swap.h  tray.c  tray.h  window.c  window.h
tests/: test_e2e.c  test_resize.c  test_tracking.c
